k8s/backend-deployment.yaml
# service 

apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP

---
#deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 10.131.103.92:8090/kp_7/backend:__IMAGE_TAG__
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: shared-storage
              mountPath: /app/data
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-pvc
