k8s/database-deployment.yaml
# service

apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 5432
  type: ClusterIP

---
# deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: shared-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-pvc
