k8s/frontend-deployment.yaml
#service 

apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort

---
# deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 10.131.103.92:8090/kp_7/frontend:__IMAGE_TAG__
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: shared-storage
              mountPath: /app/data
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-pvc
